--- a/fenceline_analysis.Rmd
+++ b/fenceline_analysis.Rmd
@@ -219,6 +219,13 @@ bvlevel_cancer
 
 ggsave(filename = "bv_risklevel_cancer.png", device = "png", plot = bvlevel_cancer, path = "~/TSCA/Fenceline Map/fencelinemap/Output", width = 10, height = 5)
 
+#cancer stats
+cancer.aov = aov(Cancer_weighted_5yr_sum ~ bv_cat, data = cancer_cvi)
+cancer.aov
+cancer.tukey = TukeyHSD(x = cancer.aov, conf.level = 0.95)
+cancer.tukey
+
+
 #asthma
 bvlevel_summary_asthma = summarySE(asthma_cvi, groupvars = "bv_cat", measurevar = "Asthma_weighted_5yr_sum")
 
@@ -315,23 +322,125 @@ write.csv(dev_top10_risk, "~/TSCA/Fenceline Map/fencelinemap/Output/dev_topcitie
 ```
 
 
-##geographic information##
+##Black Americans impact analysis##
 
-#filter for facilities in each state
+#across the US: average % of Black and white in 10 km and in county; numbers of individuals
 ```{r}
+#add new columns of the percent change from 10 km to county for white and Black (making it so that if the value is positive, there's a higher percentage of the population near facilities, and if negative, there's a lower percentage near facilities/10 km)
+
+data$Blk_difference = 100 * ((data$BlkPercent_10km - data$BlkPercent_county)/data$BlkPercent_county)
+
+data$Wht_difference = 100 * ((data$WhtPercent_10km - data$WhtPercent_county)/data$WhtPercent_county)
+
+data$Blk_difference_dec = data$Blk_difference / 100
+data$Wht_difference_dec = data$Wht_difference / 100
+
+#ttest: p < 2.2e-16; mean of Blk difference is 17%, mean of Wht difference is -4.6%
+black.white.ttest = t.test(data$Blk_difference, data$Wht_difference, paired = FALSE)
+black.white.ttest
+
+#for odds ratio calculation
+sum(data$Blk_pop_10km) #36031778
+sum(data$Blk_pop_county) #261624205
+sum(data$WhtPercent_10km * data$population_10km) #129611327
+sum(data$WhtPercent_county * data$populationE_county) #1056687894
+
+#adding columns to get number of Black americans at 10 km and county; percent of Black population that lives near facilities
+data$Blk_pop_10km = data$population_10km * data$BlkPercent_10km
+data$Blk_pop_county = data$populationE_county * data$BlkPercent_county
+
+data$Blk_10km_over_county = (data$Blk_pop_10km / data$Blk_pop_county)
+
+
+#number of Black americans living near these facilities = 36031778
+sum(data$Blk_pop_10km)
+
 
 ```
 
-#percent of facilities located in TX/LA/PA/NC
+
+#filtering for location-specific statistics
 ```{r}
+#Houston area
+houston = data %>%
+  filter(State == "TX") %>%
+  filter(County == "HARRIS" | County == "MONTGOMERY" | County == "LIBERTY" | County == "CHAMBERS" | County == "GALVESTON" | County == "BRAZORIA" | County == "FORT BEND" | County == "WALLER")
+
+#cancer alley
+cancer.alley = data %>%
+  filter(State == "LA") %>%
+  filter(County == "IBERVILLE PARISH" | County == "WEST BATON ROUGE PARISH" | County == "EAST BATON ROUGE PARISH" | County == "ASCENSION PARISH" | County == "ST JAMES PARISH" | County == "ST. JOHN THE BAPTIST PARISH" | County == "LAFAYETTE PARISH" | County == "JEFFERSON PARISH" | County == "ORLEANS PARISH")
+
+#detroit
+detroit = data %>%
+  filter(State == "MI") %>%
+  filter(County == "WAYNE" | County == "MACOMB")
+
+#chicago
+chicago = data %>%
+  filter(State == "IL" | State == "IN") %>%
+  filter(County == "COOK" | County == "DUPAGE" | County == "LAKE")
+
+#LA
+la = data %>%
+  filter(State == "CA") %>%
+  filter(County == "LOS ANGELES" | County == "ORANGE")
 
 ```
 
 
+#difference at these locations between white/Black near facilities (10km) compared to whole county
+```{r}
+#houston: p < 3.698e-5; mean of Blk difference is -20.3%%, mean of Wht difference is 5%
+houston.ttest = t.test(houston$Blk_difference, houston$Wht_difference, paired = FALSE)
+houston.ttest
+
+#cancer alley: p < 4.951e-8; mean of Blk difference is 31%, mean of Wht difference is -18.8%
+cancer.alley.ttest = t.test(cancer.alley$Blk_difference, cancer.alley$Wht_difference, paired = FALSE)
+cancer.alley.ttest
+
+#cancer alley odds ratio numbers, then done online
+sum(cancer.alley$Blk_pop_10km) #1218749
+sum(cancer.alley$Blk_pop_county) #2593216
+sum(cancer.alley$WhtPercent_10km * cancer.alley$population_10km) #892658
+sum(cancer.alley$WhtPercent_county * cancer.alley$populationE_county) #3413085
+
+#detroit: p = 0.02432; mean of Blk difference is -21.5%, mean of Wht difference is 8.61%
+detroit.ttest = t.test(detroit$Blk_difference, detroit$Wht_difference, paired = FALSE)
+detroit.ttest
+
+#chicago: no significant difference
+chicago.ttest = t.test(chicago$Blk_difference, chicago$Wht_difference, paired = FALSE)
+chicago.ttest
+
+#la: p = no significant difference
+la.ttest = t.test(la$Blk_difference, la$Wht_difference, paired = FALSE)
+la.ttest
+```
 
 
+#percent of the Black population in these areas that live near facilities; number of Black people near facilities
+```{r}
+#houston = on average, 23.4% of Black Americans living in Houston area live within 6 miles of at least 1 facility; this is 2030340 individuals
+mean(houston$Blk_10km_over_county)
+sum(houston$Blk_pop_10km)
 
+#cancer alley = on average, 78.5% of Black Americans living near cancer alley live within 6 miles of at least 1 facility; this is 1218749 individuals
+mean(cancer.alley$Blk_10km_over_county)
+sum(cancer.alley$Blk_pop_10km)
 
+#detroit = on average, 11.1% of Black Americans living in detroit area live within 6 miles of at least 1 facility; this is 1448516 individuals
+mean(detroit$Blk_10km_over_county)
+sum(detroit$Blk_pop_10km)
+
+#chicago = on average, 10.6% of Black Americans living in chicago area live within 6 miles of at least 1 facility; this is 3091814 individuals
+mean(chicago$Blk_10km_over_county)
+sum(chicago$Blk_pop_10km)
+
+#LA = on average, 9.5% of Black Americans living in LA area live within 6 miles of at least 1 facility; this is 1646540 individuals
+mean(la$Blk_10km_over_county)
+sum(la$Blk_pop_10km)
+```
 
 
 
